--- a/layouts/partials/header/index.html
+++ b/layouts/partials/header/index.html
@@ -23,9 +23,9 @@
         {{- $active := or (eq $currentPage.Permalink (absURL .URL)) ($currentPage.IsMenuCurrent "main" .) -}}
         {{- if .HasChildren -}}
         <li class="nav-item dropdown">
-          <a class="nav-link{{ if $currentPage.HasMenuCurrent "main" . }} active{{ end }}" id="navbarDropdown{{ title .Identifier }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          {{/*  <a class="nav-link{{ if $currentPage.HasMenuCurrent "main" . }} active{{ end }}" id="navbarDropdown{{ title .Identifier }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ .Pre }} {{- .Name -}} {{ .Post }}
-          </a>
+          </a>  */}}
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown{{ title .Identifier }}">
             {{- range .Children -}}
             {{- $childURL := .URL | absURL -}}
