--- a/layouts/partials/header/social-share.html
+++ b/layouts/partials/header/social-share.html
@@ -1,4 +1,4 @@
-{{- if (default true .Site.Params.socialShare) -}}
+{{/*  {{- if (default true .Site.Params.socialShare) -}}
 <div class="offcanvas offcanvas-bottom surface" tabindex="-1" id="offcanvasSocialShare" aria-labelledby="offcanvasSocialShare">
   <div class="offcanvas-header">
     <h3 class="offcanvas-title">Share</h3>
@@ -17,4 +17,4 @@
     </a>
   </div>
 </div>
-{{- end -}}
+{{- end -}}  */}}
