--- a/layouts/partials/docs/post.html
+++ b/layouts/partials/docs/post.html
@@ -16,5 +16,5 @@
     {{- partial "post/nav" . -}}
 </div>
 </article>
-{{- partial "post/copyright/index" . -}}
-{{- partial "post/comments" . -}}
+{{/*  {{- partial "post/copyright/index" . -}}  */}}
+{{/*  {{- partial "post/comments" . -}}  */}}
