--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -17,6 +17,6 @@
     {{- partial "post/nav" . -}}
   </div>
 </article>
-{{- partial "post/copyright/index" . -}}
-{{- partial "post/related-posts" . -}}
-{{- partial "post/comments" . -}}
+{{/*  {{- partial "post/copyright/index" . -}}  */}}
+{{/*  {{- partial "post/related-posts" . -}}  */}}
+{{/*  {{- partial "post/comments" . -}}  */}}
