--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,3 +8,5 @@
 <meta data-name="search-index" content="{{ absLangURL "index.json" }}">
 {{- end -}}
 {{- partial "head/assets" . -}}
+
+<script data-ad-client="{{ . }}" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8021111405489448" crossorigin="anonymous"></script>
